src/test/deca/syntax/valid/class_public_field.deca
//Description
//    Vérifier la decl de class
//
//Résultats :
//
//

class A{
int a;
}

{
A object = new A();
print(object.a);
}
