src/test/deca/syntax/invalid/wrong_decl6.deca
//Description
//    Vérifier la decl de var
//
//Résultats :
//    Erreur Syntaxique ligne 8
//


{
float while = 3.0;
}
